# openai-agent-sdk-multi_agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.py
data/: financial_transactions.json
notebooks/: data_pipeline.py
notebooks/__marimo__/session/: data_pipeline.py.json
src/: agent.py  data_models.py  main.py  prompts.py  tools.py  vector.py
utils/: generate_data.py  utils.py
